Text Align fix
Text Align fix

--- a/4D&T/4D&T.css
+++ b/4D&T/4D&T.css
@@ -155,6 +155,7 @@ div.sheet-core-content {
     background:#000;
     color:white;
     font-size:9px;
+    text-align: center;
 }
 
 .sheet-text {
